--- a/src/scss/Layout/_main.scss
+++ b/src/scss/Layout/_main.scss
@@ -10,6 +10,7 @@
   overflow-y: scroll;
   top: 0;
   left: 25%;
+  overflow-x: hidden;
   &--custom-post {
     margin-top: -32px;
     width: 100vw;
